# omnitool

./: Cargo.toml  flake.nix
src/: config.rs  imap.rs  imap_datasource.rs  main.rs  my_data.rs  shell.rs  shells.rs
src/shells/: imap.rs
