[package]
name = "omnitool"
description = "A CLI tool for agentic office work"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-imap = { version = "0.11.1", features = ["tokio"] }
dirs = "6.0.0"
futures = "0.3.31"
rustls = "0.23.35"
rustls-pki-types = "1.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
structopt = "0.3.26"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net", "macros"] }
tokio-rustls = "0.26.4"
tokio-util = { version = "0.7.17", features = ["compat"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
webpki-roots = "1.0.4"
