[package]
name = "omnitool"
description = "A CLI tool for agentic office work"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-imap = { version = "0.11.1", features = ["tokio"] }
directories = "5.0"
rpassword = "7.3"
futures = "0.3.31"
rustls = "0.23.35"
rustls-pki-types = "1.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
structopt = "0.3.26"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net", "macros"] }
tokio-rustls = "0.26.4"
tokio-util = { version = "0.7.17", features = ["compat"] }
webpki-roots = "1.0.4"
rustyline = "17.0.2"
rand = "0.9.2"
shlex = "1.3.0"
